# Satan-s-Bot

./: .gitignore  config.py  main.py  pyproject.toml  responses.json  zzfeature_ideas.md
Changelogs/: 2020-12-31.md  2021-01-01.md
extensions/: moderator.py  retriever.py  truthordare.py  utils.py
extensions/helpers/: datahelper.py  errorhelper.py  heartbeathelper.py  helphelper.py  souphelper.py  timerhelper.py
non_bot_modules/mongo_schemas/: gifcache_validator.json  server_preferences_validator.json
zzarchives/: dbaccess.py  oldcode.py  per-server-responses.json
