[tool.poetry]
name = "kmlegion-bot"
version = "0.1.0"
description = ""
authors = ["Cameron, Kira, Bill"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
azure-cosmos = "^4.2.0"
discord-pretty-help = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
